test/valid/2DVector/TestVectorDotProduct.plume
/**
 * A class to test vector dot product
 *
 * @author Robin Burgess 36815
 */
class TestVectorDotProduct extends Object is
  method main : () -> String is
    new Vector(2,4).dotProduct(new Vector(-1,1)).toString()
    
  method override toString : () -> String is
	"TestVectorDotProduct"