test/invalid/ClassExtendsBoolean/ClassExtendsBoolean.plume
/**
 * Class can't extend primitive type except Object - Boolean.
 *
 * @author Diogo Marques, 30100
 */
class ClassExtendsBoolean extends Boolean is
	method override toString : () -> String is
		""